# docktail

./: .gitignore  .readthedocs.yaml  README.md  conf.py  environment.yml  index.rst  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docktail/: __init__.py  analysis.py  cli.py  config.py  pipeline.py  preprocessing.py  reporting.py  slurm.py  xtb_runner.py
docs/: Makefile  changelog.md  conf.py  configuration.md  index.rst  installation.md  usage.md
docs/api/: analysis.rst  config.rst  index.rst  pipeline.rst  preprocessing.rst  reporting.rst  slurm.rst  xtb_runner.rst
examples/: docktail.yaml
tests/: test_analysis.py  test_pipeline_discover.py  test_preprocessing.py  test_reporting.py  test_xtb_runner.py
